# med-imagenet

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  all_series.ipynb  mkdocs.yml  pixi.toml  pyproject.toml  read_rtstruct-summary-file.py  ruff.toml
.github/workflows/: main.yaml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/ImagingFormats/: index.html
dev/ImagingFormats/DICOM/: index.html
dev/ImagingFormats/nifti/: index.html
dev/Introduction/Challenges/: index.html
dev/Introduction/EthicalConsiderations/: index.html
dev/Introduction/EvaluationValidation/: index.html
dev/Introduction/ImageNet/: index.html
dev/Introduction/MedImageTools_Specification/: index.html
dev/Overview/: index.html
dev/Overview/AI_Applications/: index.html
dev/Overview/Methodology/: index.html
dev/Overview/ProjectJustification/: index.html
dev/Overview/ResearchObjectivesAims/: index.html
dev/archive/ImagingFormats/: index.html
dev/archive/devnotes/: index.html
dev/cli/imgnet/: index.html
dev/devnotes/: index.html
dev/devnotes/Inspiration/: index.html
dev/devnotes/MVP-notes/: index.html
dev/devnotes/Med-ImageDB/: index.html
dev/devnotes/UserStoriesAndArchitecture/: index.html
dev/home/introduction/: index.html
dev/home/methodology/: index.html
dev/reference/imgnet/: index.html
dev/reference/loggers/: index.html
dev/reference/utils/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: .pages  ImageNet.md
docs/ImagingFormats/: index.md
docs/Introduction/: EthicalConsiderations.md  EvaluationValidation.md  ImageNet.md
docs/Overview/: .pages  AI_Applications.md  Methodology.md  ProjectJustification.md  ResearchObjectivesAims.md  index.md
docs/archive/ImagingFormats/: DICOM.md  nifti.md
docs/archive/Introduction/: .pages  Challenges.md  MedImageTools_Specification.md
docs/archive/Overview/: ResearchObjectivesAims.md
docs/archive/devnotes/: Med-ImageDB.md  README.md  UserStoriesAndArchitecture.md
docs/cli/: .pages  imgnet.md
docs/devnotes/: MVP-notes.md  UserStoriesAndArchitecture.md
docs/devnotes/Inspiration/: amid.md  index.md
docs/formats/: MedicalImageFormats.md  nifti.md
docs/home/: .pages  methodology.md
docs/images/: .pre-commit-config.yaml
docs/reference/: .pages  imgnet.md  loggers.md  utils.md
docs/reference/collections/: .pages  source.md  store.md  utils.md
docs/reference/download/: .pages  base.md  downloaders.md  utils.md
docs/reference/query/: .pages  engine.md  models.md  parser.md  rule.md  valid_query.md
docs/usage/: .pages  index.md
notebooks/: Grouped_Cancer_Types.csv  TCIA_plots.ipynb  allseries_query.ipynb  modality_counts.csv  nbia_query.ipynb
src/imgnet/: __init__.py  _download.py  collections.py  collections_summary.py  imgnet.py  index.py  query.py  supported_collections.py  tciascraper.py
src/imgnet/cli/: __init__.py  __main__.py  collections.py  download.py  query.py  update_index.py  updatedb.py
src/med-imagenet/: imagenet.py  index.py
test/: valid_query.json  valid_query_schema.json
test_dir/: selected_dicoms.csv  valid_query.json  valid_query_schema.json
tests/: conftest.py
tests/integration/: test_imgnet.py  test_query.py
tests/test_dir/: query_results.csv  selected_dicoms.csv  valid_query.json  valid_query_schema.json
tests/unit_tests/: test_idc.py  test_rule.py
workflow/: getRTSTRUCTS.smk
workflow/scripts/: get_rtstruct_summary.py  get_seg_summary.py
(+54 files in other folders)
