[project]
name = "med-imagenet"
version = "0.1"
description = ""
authors = [
    { name = "Joshua Siraj", email = "joshua.siraj@uhn.ca" },
    { name = "Declan Korda", email = "dkorda@protonmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "med-imagetools >=2.11.1, <3",
    "idc-index >=0.11.10, <0.12",
    "s3fs >=2026.2.0, <2027"
]



[project.scripts]
imgnet = "imgnet.cli.__main__:cli"

# pyproject.toml
[tool.mypy]
ignore_missing_imports = true