[project]
name = "med-imagenet"
version = "0.1.0"
description = ""
authors = [
    { name = "Joshua Siraj", email = "joshua.siraj@uhn.ca" },
    { name = "Declan Korda", email = "dkorda@protonmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "med-imagetools >=2.11.1, <3",
    "idc-index >=0.11.10, <0.12",
    "s3fs >=2026.2.0, <2027",
    "platformdirs >=4, <5",
    "huggingface_hub >=0.20, <1",
    "msgpack >=1.1.2, <2",
    "orjson >=3, <4",
    "click >=8.2.1, <9",
    "pydantic >=2.12.5, <3",
    "structlog >=25.5.0, <26",
    "rich >=14.1.0, <15",
    "tqdm >=4.67.3, <5",
    "requests >=2.32, <3",
    "fsspec >=2026.3.0, <2027",
    "pandas >=2.2.3, <3",
]



[project.scripts]
imgnet = "imgnet.cli.__main__:cli"

# pyproject.toml
[tool.mypy]
ignore_missing_imports = true